--- a/index.html
+++ b/index.html
@@ -7,112 +7,89 @@
   <meta name="description" content="Solara — assistente conversacional da Repsol para óleos, lubrificantes e fluidos automotivos." />
   <meta name="theme-color" content="#0a0a0a" />
   <link rel="preconnect" href="https://unpkg.com" />
-
   <style>
     :root{
       --bg: #0b0c10;
-      --card: #121318;
       --muted: #9aa3b2;
       --text: #e9edf5;
-      --brand: #ff6a00; /* toque quente e energético */
-      --ring: rgba(255,106,0,.25);
+      --brand: #ff6a00;
+      --brand-2:#ffd000;
+      --glass: rgba(255,255,255,.06);
     }
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
+    *{ box-sizing: border-box; }
+    html, body{ height:100%; }
     body{
       margin:0;
-      font: 16px/1.55 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
-      color: var(--text);
+      color:var(--text);
+      font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans";
       background:
         radial-gradient(1200px 600px at 80% -10%, rgba(255,106,0,.12), transparent 60%),
-        radial-gradient(1000px 600px at 10% 110%, rgba(255,106,0,.10), transparent 55%),
+        radial-gradient(1000px 600px at 10% 110%, rgba(255,208,0,.10), transparent 55%),
         var(--bg);
     }
-    .container{
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 24px;
-    }
+    .container{ max-width:1100px; margin:0 auto; padding:24px; }
+
     header{
-      display:flex; align-items:center; justify-content:space-between;
-      gap: 12px; padding: 12px 0 8px;
+      display:flex; align-items:center; justify-content:space-between; gap:12px;
+      padding:8px 0 6px;
     }
-    .brand{
-      display:flex; align-items:center; gap:12px; text-decoration:none; color:inherit;
-    }
+    .brand{ display:flex; align-items:center; gap:12px; color:inherit; text-decoration:none; }
     .brand-mark{
       width:36px; height:36px; border-radius:10px;
-      background: conic-gradient(from 210deg at 50% 50%, #ff6a00, #ffd000, #ff6a00);
-      box-shadow: 0 0 0 6px var(--ring), 0 6px 18px rgba(0,0,0,.35);
+      background: conic-gradient(from 210deg at 50% 50%, var(--brand), var(--brand-2), var(--brand));
+      box-shadow: 0 6px 18px rgba(0,0,0,.35);
     }
     .brand-title{ font-weight:700; letter-spacing:.2px; }
-    main{
-      display:grid; gap:18px; margin-top: 10px; margin-bottom: 24px;
-      grid-template-columns: 1fr;
-    }
-    .card{
-      background: color-mix(in oklab, var(--card) 94%, black 6%);
-      border: 1px solid rgba(255,255,255,.06);
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.35);
-      overflow: hidden;
-    }
+
+    main{ padding: 8px 0 18vh; } /* espaço para a bolha do chat no rodapé */
     .hero{
-      padding: 22px 22px 0;
+      display:grid; gap:16px;
+      padding: clamp(18px, 2.5vw, 28px);
+      border-radius: 18px;
+      background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+      border: 1px solid var(--glass);
+      box-shadow: 0 12px 40px rgba(0,0,0,.35);
     }
     .hero h1{
-      margin: 0 0 6px; font-size: clamp(20px, 3.5vw, 28px);
+      margin:0;
+      font-size: clamp(22px, 4.2vw, 38px);
+      line-height:1.2;
     }
-    .hero p{
-      margin: 0 0 16px; color: var(--muted);
-    }
-    .widget-wrap{
-      padding: 0 22px 22px;
+    .hero p{ margin:0; color:var(--muted); max-width: 70ch; }
+
+    .chip-row{ display:flex; flex-wrap:wrap; gap:8px; margin-top:4px; }
+    .chip{
+      font-size: 12px; color:var(--text);
+      border:1px solid var(--glass);
+      background: rgba(255,255,255,.03);
+      border-radius:999px; padding:6px 10px;
+      opacity:.9;
     }
 
-    /* Área do widget — ocupa bem o viewport com responsividade */
-    .widget-slot{
-      display: grid;
-      place-items: center;
-      width: 100%;
-      min-height: min(80vh, 900px);
-      /* fallback visual */
-      background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.01));
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: 14px;
-      padding: 10px;
+    .cta{
+      display:inline-flex; align-items:center; gap:10px;
+      margin-top: 6px;
+      padding: 10px 14px;
+      border-radius: 12px;
+      background: linear-gradient(90deg, var(--brand), var(--brand-2));
+      color:#1a1a1a; font-weight:700; text-decoration:none;
+      box-shadow: 0 8px 26px rgba(255,106,0,.35);
+      transition: transform .05s ease-in;
     }
-    elevenlabs-convai{
-      display: block;
-      width: 100%;
-      height: 100%;
-      max-height: 100%;
-      border: none;
-    }
+    .cta:active{ transform: translateY(1px); }
 
-    .hint{
-      font-size: 14px; color: var(--muted);
-      display:flex; align-items:center; gap:8px; margin-top: 10px;
-    }
-    .badge{
-      display:inline-flex; align-items:center; gap:8px;
-      padding: 6px 10px; border-radius: 999px;
-      border: 1px dashed rgba(255,255,255,.12);
-      background: rgba(255,255,255,.02);
-      color: var(--muted);
-      font-size: 12px;
-    }
+    .hint{ color:var(--muted); font-size:14px; margin-top:4px; }
 
     footer{
+      color:var(--muted); font-size:14px; padding: 14px 0 26px;
       display:flex; justify-content:space-between; align-items:center; gap:12px;
-      padding: 8px 0 12px; color: var(--muted); font-size: 14px;
     }
-    a { color: #ffd000; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    a{ color:#ffd000; text-decoration:none; } a:hover{ text-decoration:underline; }
 
-    /* Responsivo extra para telas muito pequenas */
-    @media (max-width: 420px){
-      .widget-slot{ min-height: 75vh; }
+    /* Mobile refinements */
+    @media (max-width: 520px){
+      main{ padding-bottom: 22vh; }
+      .hero{ padding: 16px; }
     }
   </style>
 </head>
@@ -123,32 +100,35 @@
         <span class="brand-mark" aria-hidden="true"></span>
         <span class="brand-title">Solara • Assistente Repsol</span>
       </a>
-      <span class="badge" aria-label="Status do serviço">
-        <svg width="10" height="10" viewBox="0 0 10 10" aria-hidden="true" focusable="false"><circle cx="5" cy="5" r="5" fill="#29e17e"/></svg>
+      <span aria-label="Status do serviço" style="display:flex;align-items:center;gap:8px;color:#9ee6b1;">
+        <svg width="10" height="10" viewBox="0 0 10 10" aria-hidden="true"><circle cx="5" cy="5" r="5" fill="#29e17e"/></svg>
         Online
       </span>
     </header>
 
     <main id="app" role="main">
-      <section class="card hero" aria-label="Apresentação">
+      <section class="hero" aria-label="Apresentação">
         <h1>Converse com a Solara</h1>
-        <p>A Solara é o atendente conversacional da Repsol, pronta para ajudar com óleos, lubrificantes e fluidos para carros, motos, pesados e EV — além de informações institucionais.</p>
-      </section>
+        <p>
+          Assistente conversacional da Repsol para dúvidas sobre óleos, lubrificantes e fluidos — carros, motos, veículos pesados e EV — além de informações institucionais.
+        </p>
 
-      <section class="card widget-wrap" aria-label="Widget de conversa">
-        <div class="widget-slot" id="widget-slot">
-          <!-- Widget ElevenLabs -->
-          <elevenlabs-convai agent-id="agent_8601k2zk8ndkepnap4gewwbtb9jk"></elevenlabs-convai>
-          <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+        <div class="chip-row" aria-label="Áreas de suporte">
+          <span class="chip">Especificações OEM (VW, MB, BMW, GM/Dexos…)</span>
+          <span class="chip">ACEA / API / ILSAC</span>
+          <span class="chip">Low-SAPS & DPF</span>
+          <span class="chip">Fluidos EV</span>
+          <span class="chip">Catálogos oficiais</span>
+        </div>
 
-          <!-- Fallback leve se o widget demorar a carregar -->
-          <noscript>
-            <p>Ative o JavaScript para iniciar a conversa com a Solara.</p>
-          </noscript>
-        </div>
-        <div class="hint">
-          Dica: permita acesso ao microfone do navegador para uma experiência completa.
-        </div>
+        <a class="cta" href="#"
+           onclick="alert('Clique no botão do chat no canto inferior direito para iniciar.'); return false;">
+          Iniciar conversa
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path d="M12 3a9 9 0 1 1-6.364 15.364L3 21l2.636-2.636A9 9 0 0 1 12 3zm0 2a7 7 0 1 0 0 14 7 7 0 0 0 0-14zm-1 3h2v4h-2V8zm0 6h2v2h-2v-2z"/>
+          </svg>
+        </a>
+        <div class="hint">O botão do chat aparece no canto inferior direito.</div>
       </section>
     </main>
 
@@ -158,18 +138,17 @@
     </footer>
   </div>
 
+  <!-- Widget ElevenLabs (bolha flutuante, sem container gigante) -->
+  <elevenlabs-convai agent-id="agent_8601k2zk8ndkepnap4gewwbtb9jk"></elevenlabs-convai>
+  <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+
+  <noscript>
+    Habilite o JavaScript para iniciar a conversa com a Solara.
+  </noscript>
+
   <script>
     // Atualiza o ano automaticamente
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // Pequena melhoria de UX: se o custom element estiver pronto, adiciona uma borda de foco
-    (function () {
-      const slot = document.getElementById('widget-slot');
-      function ready() { slot.style.boxShadow = "0 0 0 6px var(--ring)"; setTimeout(()=>slot.style.boxShadow="none", 900); }
-      if (customElements && customElements.whenDefined) {
-        customElements.whenDefined('elevenlabs-convai').then(ready).catch(()=>{});
-      }
-    })();
   </script>
 </body>
 </html>
