--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       --text: #e9edf5;
       --brand: #ff6a00;
       --brand-2:#ffd000;
-      --glass: rgba(255,255,255,.06);
+      --glass: rgba(255,255,255,.08);
     }
     *{ box-sizing: border-box; }
     html, body{ height:100%; }
@@ -27,8 +27,34 @@
         radial-gradient(1000px 600px at 10% 110%, rgba(255,208,0,.10), transparent 55%),
         var(--bg);
     }
-    .container{ max-width:1100px; margin:0 auto; padding:24px; }
 
+    /* ===== Fundo com o site embutido ===== */
+    .bg-embed{
+      position: fixed; inset: 0; z-index: -1; overflow: hidden;
+    }
+    .bg-embed iframe{
+      position: absolute; inset: 0;
+      width: 100vw; height: 100vh; border: 0;
+      pointer-events: none;             /* impede clique/scroll no fundo */
+      transform: scale(1.03);           /* leve zoom para cobrir sem barras */
+      filter: brightness(.35) saturate(.95) contrast(1.05); /* escurece p/ legibilidade */
+      transition: opacity .25s ease-out;
+      opacity: 0;                       /* fica visível só após load */
+    }
+    .bg-embed.ready iframe{ opacity: 1; }
+    .bg-veil{
+      position: absolute; inset: 0; pointer-events: none;
+      background:
+        radial-gradient(1200px 600px at 80% -10%, rgba(255,106,0,.10), transparent 60%),
+        radial-gradient(1000px 600px at 10% 110%, rgba(255,208,0,.08), transparent 55%);
+    }
+    /* Em telas pequenas, esconda o iframe por performance/dados */
+    @media (max-width: 640px){
+      .bg-embed{ display:none; }
+    }
+
+    /* ===== Layout ===== */
+    .container{ max-width:1100px; margin:0 auto; padding:24px; }
     header{
       display:flex; align-items:center; justify-content:space-between; gap:12px;
       padding:8px 0 6px;
@@ -41,44 +67,29 @@
     }
     .brand-title{ font-weight:700; letter-spacing:.2px; }
 
-    main{ padding: 8px 0 18vh; } /* espaço para a bolha do chat no rodapé */
+    main{ padding: 10px 0 18vh; } /* espaço para a bolha do chat */
     .hero{
       display:grid; gap:16px;
       padding: clamp(18px, 2.5vw, 28px);
       border-radius: 18px;
-      background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+      background: linear-gradient(180deg, rgba(18,19,24,.65), rgba(18,19,24,.35)); /* vidro escuro */
       border: 1px solid var(--glass);
-      box-shadow: 0 12px 40px rgba(0,0,0,.35);
+      box-shadow: 0 12px 40px rgba(0,0,0,.45);
+      backdrop-filter: blur(6px);
     }
     .hero h1{
-      margin:0;
-      font-size: clamp(22px, 4.2vw, 38px);
-      line-height:1.2;
+      margin:0; font-size: clamp(22px, 4.2vw, 38px); line-height:1.2;
     }
     .hero p{ margin:0; color:var(--muted); max-width: 70ch; }
 
-    .chip-row{ display:flex; flex-wrap:wrap; gap:8px; margin-top:4px; }
+    .chip-row{ display:flex; flex-wrap:wrap; gap:8px; margin-top:6px; }
     .chip{
       font-size: 12px; color:var(--text);
       border:1px solid var(--glass);
-      background: rgba(255,255,255,.03);
-      border-radius:999px; padding:6px 10px;
-      opacity:.9;
+      background: rgba(255,255,255,.06);
+      border-radius:999px; padding:6px 10px; opacity:.95;
+      backdrop-filter: blur(2px);
     }
-
-    .cta{
-      display:inline-flex; align-items:center; gap:10px;
-      margin-top: 6px;
-      padding: 10px 14px;
-      border-radius: 12px;
-      background: linear-gradient(90deg, var(--brand), var(--brand-2));
-      color:#1a1a1a; font-weight:700; text-decoration:none;
-      box-shadow: 0 8px 26px rgba(255,106,0,.35);
-      transition: transform .05s ease-in;
-    }
-    .cta:active{ transform: translateY(1px); }
-
-    .hint{ color:var(--muted); font-size:14px; margin-top:4px; }
 
     footer{
       color:var(--muted); font-size:14px; padding: 14px 0 26px;
@@ -86,7 +97,6 @@
     }
     a{ color:#ffd000; text-decoration:none; } a:hover{ text-decoration:underline; }
 
-    /* Mobile refinements */
     @media (max-width: 520px){
       main{ padding-bottom: 22vh; }
       .hero{ padding: 16px; }
@@ -94,6 +104,18 @@
   </style>
 </head>
 <body>
+  <!-- Site de fundo (usa a URL fornecida) -->
+  <div class="bg-embed" id="bg" aria-hidden="true">
+    <iframe
+      id="bgFrame"
+      src="https://www.repsol.com/en/index.cshtml"
+      title="Repsol site background"
+      loading="lazy"
+      referrerpolicy="no-referrer">
+    </iframe>
+    <div class="bg-veil"></div>
+  </div>
+
   <div class="container">
     <header role="banner" aria-label="Cabeçalho do site">
       <a class="brand" href="./" aria-label="Solara — Assistente Repsol">
@@ -110,25 +132,16 @@
       <section class="hero" aria-label="Apresentação">
         <h1>Converse com a Solara</h1>
         <p>
-          Assistente conversacional da Repsol para dúvidas sobre óleos, lubrificantes e fluidos — carros, motos, veículos pesados e EV — além de informações institucionais.
+          Assistente conversacional da Repsol para dúvidas sobre óleos, lubrificantes e fluidos — carros, motos, veículos pesados e EV — além de informações institucionais. Clique no botão no canto inferior direito para iniciar.
         </p>
 
         <div class="chip-row" aria-label="Áreas de suporte">
-          <span class="chip">Especificações OEM (VW, MB, BMW, GM/Dexos…)</span>
+          <span class="chip">Especificações OEM</span>
           <span class="chip">ACEA / API / ILSAC</span>
           <span class="chip">Low-SAPS & DPF</span>
           <span class="chip">Fluidos EV</span>
           <span class="chip">Catálogos oficiais</span>
         </div>
-
-        <a class="cta" href="#"
-           onclick="alert('Clique no botão do chat no canto inferior direito para iniciar.'); return false;">
-          Iniciar conversa
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <path d="M12 3a9 9 0 1 1-6.364 15.364L3 21l2.636-2.636A9 9 0 0 1 12 3zm0 2a7 7 0 1 0 0 14 7 7 0 0 0 0-14zm-1 3h2v4h-2V8zm0 6h2v2h-2v-2z"/>
-          </svg>
-        </a>
-        <div class="hint">O botão do chat aparece no canto inferior direito.</div>
       </section>
     </main>
 
@@ -138,17 +151,29 @@
     </footer>
   </div>
 
-  <!-- Widget ElevenLabs (bolha flutuante, sem container gigante) -->
+  <!-- Widget ElevenLabs (bolha flutuante) -->
   <elevenlabs-convai agent-id="agent_8601k2zk8ndkepnap4gewwbtb9jk"></elevenlabs-convai>
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 
-  <noscript>
-    Habilite o JavaScript para iniciar a conversa com a Solara.
-  </noscript>
+  <noscript>Habilite o JavaScript para conversar com a Solara.</noscript>
 
   <script>
-    // Atualiza o ano automaticamente
+    // Ano no rodapé
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Marca como "pronto" quando o iframe carrega; se não carregar (CSP/X-Frame),
+    // escondemos o container para não mostrar um bloco vazio.
+    const bg = document.getElementById('bg');
+    const frame = document.getElementById('bgFrame');
+    let loaded = false;
+    frame.addEventListener('load', () => {
+      loaded = true;
+      bg.classList.add('ready');
+    });
+    // Fallback em 2.5s: se não carregou, some com o bg-embed
+    setTimeout(() => {
+      if (!loaded) bg.style.display = 'none';
+    }, 2500);
   </script>
 </body>
 </html>
