--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="preconnect" href="https://unpkg.com" />
 
   <!-- FAVICONS (usa o SVG em assets/logo-repsol.svg) -->
-  <link rel="icon" type="image/svg+xml" href="assets/logo-repsol.svg">
+  <link rel="icon" type="image/svg+xml" href="assets/repsol-logo.png">
   <!-- Fallbacks opcionais (mantidos caso queira compatibilidade ampla) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/logo-repsol.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/repsol-logo.png">
   <link rel="manifest" href="/site.webmanifest">
 
   <style>
