--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
     <!-- Rodapé fixado no pé da página -->
     <footer class="footer-wrap" role="contentinfo">
       <div class="container footer-content">
-        <span>© <span id="year"></span> Repsol • Projeto demonstrativo</span>
-        <span>Solara: Assistente Conversacional Respol AI</span>
+        <span>© <span id="year"></span> Solara Repsol AI • Projeto Demonstrativo</span>
       </div>
     </footer>
   </div>
