--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Solara • Assistente Repsol</title>
-  <meta name="description" content="Solara — assistente conversacional da Repsol para óleos, lubrificantes e fluidos automotivos." />
+  <meta name="description" content="BRAIN Bot — Assistente Conversacional de IA do BRAIN." />
   <meta name="theme-color" content="#0a0a0a" />
   <link rel="preconnect" href="https://unpkg.com" />
 
   <!-- FAVICONS (usa o SVG em assets/logo-repsol.svg) -->
-  <link rel="icon" type="image/svg+xml" href="assets/repsol-logo.png">
+  <link rel="icon" type="image/svg+xml" href="assets/logo_brain_facens_colorido.svg">
   <!-- Fallbacks opcionais (mantidos caso queira compatibilidade ampla) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/repsol-logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/logo_brain_facens_colorido.svgg">
   <link rel="manifest" href="/site.webmanifest">
 
   <style>
@@ -109,12 +109,12 @@
       <!-- Se o arquivo tem espaços, use %20 -->
       <source type="image/png"
         srcset="
-          assets/Screenshot from 2025-08-18 21-39-43.png 1280w,
-          assets/Screenshot from 2025-08-18 21-39-43.png 1920w,
-          assets/Screenshot from 2025-08-18 21-39-43.png 2560w"
+          assets/brain_banner.png 1280w,
+          assets/brain_banner.png 1920w,
+          assets/brain_banner.png 2560w"
         sizes="100vw" />
       <img id="bgImg"
-        src="assets/Screenshot from 2025-08-18 21-39-43.png"
+        src="assets/brain_banner.png"
         alt="" loading="eager" decoding="async" />
     </picture>
     <div class="bg-veil"></div>
@@ -123,10 +123,10 @@
   <div class="page">
     <div class="container">
       <header role="banner" aria-label="Cabeçalho do site">
-        <a class="brand" href="./" aria-label="Solara — Assistente Repsol">
+        <a class="brand" href="./" aria-label="BRAIN Bot — Assistente BRAIN">
           <!-- novo: uso do SVG como logo -->
-          <img class="brand-logo" src="assets/logo-repsol.svg" alt="Repsol" />
-          <span class="brand-title">Solara AI</span>
+          <img class="brand-logo" src="assets/logo_brain_facens_colorido.svg" alt="Repsol" />
+          <span class="brand-title">BRAIN Bot AI</span>
         </a>
         <span aria-label="Status do serviço" style="display:flex;align-items:center;gap:8px;color:#9ee6b1;">
           <svg width="10" height="10" viewBox="0 0 10 10" aria-hidden="true"><circle cx="5" cy="5" r="5" fill="#29e17e"/></svg>
@@ -136,16 +136,16 @@
 
       <main id="app" role="main">
         <section class="hero" aria-label="Apresentação">
-          <h1>Converse com a Solara AI</h1>
+          <h1>Converse com a BRAIN Bot</h1>
           <p>
-            Assistente conversacional da Repsol para dúvidas sobre óleos, lubrificantes e fluidos — carros, motos, veículos pesados e EV — além de informações institucionais. Clique no botão no canto inferior direito para iniciar.
+            BRAIN Bot, uma assistente técnica multitarefas projetada para treinamento, apresentações institucionais, perguntas e respostas.
           </p>
           <div class="chip-row" aria-label="Áreas de suporte">
-            <span class="chip">Especificações OEM</span>
-            <span class="chip">ACEA / API / ILSAC</span>
-            <span class="chip">Low-SAPS & DPF</span>
-            <span class="chip">Fluidos EV</span>
-            <span class="chip">Catálogos oficiais</span>
+            <span class="chip">Capacitação</span>
+            <span class="chip">On-Boarding</span>
+            <span class="chip">Institucional</span>
+            <span class="chip">Q&A</span>
+            <span class="chip">E Muito Mais</span>
           </div>
         </section>
       </main>
@@ -154,16 +154,16 @@
     <!-- Rodapé fixado no pé da página -->
     <footer class="footer-wrap" role="contentinfo">
       <div class="container footer-content">
-        <span>© <span id="year"></span> Solara Repsol AI • Projeto Demonstrativo</span>
+        <span>© <span id="year"></span> BRAIN Bot AI • Facens</span>
       </div>
     </footer>
   </div>
 
   <!-- Widget ElevenLabs (bolha flutuante) -->
-  <elevenlabs-convai agent-id="agent_2701k2zzf73qfk6az4jt1k1q3vd6"></elevenlabs-convai>
+  <elevenlabs-convai agent-id="agent_1801k3275aq9eftrg3bycy4bzs2x"></elevenlabs-convai>
   <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 
-  <noscript>Habilite o JavaScript para conversar com a Solara.</noscript>
+  <noscript>Habilite o JavaScript para conversar com a BRAIN Bot.</noscript>
 
   <script>
     // Ano no rodapé
