--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Solara • Assistente Repsol</title>
+  <title>BRAIN Bot AI • Assistente Conversacional</title>
   <meta name="description" content="BRAIN Bot — Assistente Conversacional de IA do BRAIN." />
   <meta name="theme-color" content="#0a0a0a" />
   <link rel="preconnect" href="https://unpkg.com" />
